@@ -1,3 +1,4 @@
 #A package
 
 from tdh.metadata.sources.activities import ActivitiesQuerySourceFactory
+from tdh.metadata.sources.research_keywords import ResearchKeywordQuerySourceFactory
